# ShiftGifs

./: README.md  pyproject.toml  shift_gifs.py
