[project]
name = "shift_gifs"
version = "0.1.0"
description = "Create phase-shifted video grids"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "appeal>=0.6.3",
]
requires-python = ">=3.8"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
# Same as Black.
line-length = 88
# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable all rules by default
select = ["ALL"]
ignore = [
    "D203",  # one-blank-line-before-class (incompatible with no-blank-line-before-class)
    "D212",  # multi-line-summary-first-line (incompatible with multi-line-summary-second-line)
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore imports in __init__.py files
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["shift_gifs"]
combine-as-imports = true
lines-after-imports = 2

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"

[tool.ruff.lint.pylint]
max-args = 5
max-returns = 5

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]
